syntax = "proto3";

option go_package = "grpc/message/message";
option java_multiple_files = true;
option java_package = "io.grpc.examples.message";
option java_outer_classname = "MessageProto";

package message;

// Interface exported by the server.
service Message {
  // A Bidirectional streaming RPC.
  //
  // Accepts a stream of RouteNotes sent while a route is being traversed,
  // while receiving other RouteNotes (e.g. from other users).
  rpc MessageChat(ClientInit) returns (stream Data) {}
}

message ClientInit {
  string id = 1;
}

message Data {
  string deviceId = 1;
  string key = 2;
  string value = 3;
}
